--- a/index.html
+++ b/index.html
@@ -45,13 +45,12 @@
   <section id="contact">
     <div class="container">
       <h2>Contact Me</h2>
-      <p>Email: <a href="mailto:poojari@example.com">poojari@example.com</a></p>
-      <p>Phone: +91 98765 43210</p>
-      <div class="socials">
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-      </div>
+      <form id="contact-form">
+        <input type="text" name="name" placeholder="Your Name" required />
+        <input type="email" name="email" placeholder="Your Email" required />
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+      </form>
     </div>
   </section>
 
@@ -59,6 +58,25 @@
   <footer>
     <p>&copy; 2025 Poojari. All rights reserved.</p>
   </footer>
+
+  <script>
+    document.getElementById("contact-form").addEventListener("submit", async function (e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+
+      try {
+        await fetch("https://script.google.com/macros/s/AKfycbwEx_xFp5dy5fxaUpqBfD24zHFR8hukOaTrDhYLCWaSL9Kr0EeFs5lP9AqYiXrWWo00ug/exec", {
+          method: "POST",
+          body: formData
+        });
+        alert("Thank you! Your message has been sent.");
+        this.reset();
+      } catch (error) {
+        alert("Oops! Something went wrong.");
+        console.error(error);
+      }
+    });
+  </script>
 
 </body>
 </html>
