--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
         <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
+        <button type="submit" class="bubbly-button">Send Message</button>
       </form>
     </div>
   </section>
