--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <title>Poojari | Businessman in Surat</title>
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script defer src="script.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -28,7 +28,7 @@
     </div>
   </section>
 
-  <!-- Services / Focus Areas -->
+  <!-- Services Section -->
   <section id="services">
     <div class="container">
       <h2>My Business Focus</h2>
@@ -49,7 +49,7 @@
         <input type="text" name="name" placeholder="Your Name" required />
         <input type="email" name="email" placeholder="Your Email" required />
         <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit" class="bubbly-button">Send Message</button>
+        <button type="submit">Send Message</button>
       </form>
     </div>
   </section>
