--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <script src="https://analytics.ahrefs.com/analytics.js" data-key="ptgqDUvZpFPr/bF+gBoLwA" async></script>
   <script defer src="script.js"></script>
 </head>
 <body>
